# CSharp-PInvoke-Example

./: .gitignore  LearnPInvoke.sln
LearnPInvoke/: DllCustomResolver.cs  InteropObject.cs  LearnPInvoke.csproj  Program.cs
LearnPInvoke/native/: CMakeLists.txt
LearnPInvoke/native/include/: object.hpp  object_wrapper.hpp
LearnPInvoke/native/src/: object.cpp  object_wrapper.cpp
LearnPInvoke/native/tests/: test.cpp  test_wrapper.c
